--- a/efm/config.yaml
+++ b/efm/config.yaml
@@ -51,7 +51,7 @@ tools:
 languages:
     go:
         - <<: *go-format
-        - <<: *golangci-lint
+        # - <<: *golangci-lint
 
     lua:
         - <<: *lua-format
