--- a/linter-config/.golangci.yml
+++ b/linter-config/.golangci.yml
@@ -31,15 +31,15 @@ linters:
         - rowserrcheck
         - sqlclosecheck
         - gocritic
-        - revive # annoying
+        # - revive # annoying
         # style
         - dupl
         - goconst
         # fixes
-        - godot
-        - gofumpt
-        - whitespace
-        - goimports
+        # - godot
+        # - gofumpt
+        # - whitespace
+        # - goimports
         # complexity
         - gocyclo
 
@@ -50,14 +50,14 @@ issues:
 
 linter-settings:
     staticcheck:
-        go: "1.16"
+        go: '1.16'
         # -ST1005 is error string guideline no capitalized
         # see: https://staticcheck.io/docs/checks#ST1005
-        checks: ["all", "-ST1005"]
+        checks: ['all', '-ST1005']
 
     gosimple:
-        go: "1.16"
-        checks: ["all"]
+        go: '1.16'
+        checks: ['all']
 
     # revive rules: https://github.com/mgechev/revive#available-rules
     revive:
